# XOR_NN

./: .gitignore  CMakeLists.txt  LICENSE  XOR_NN.sln
XOR_NN/: Matrix.h  XOR_NN.cpp  XOR_NN.vcxproj  XOR_NN.vcxproj.filters  pch.h
src/: CMakeLists.txt  Matrix.cpp  NeuralNetwork.cpp  XOR_NN.cpp
src/headers/: NeuralNetwork.h
